new user registration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
+        "authservice",
+        "createnewuser",
+        "Createuser",
+        "createuserdto",
         "typeorm"
     ]
 }
