levaestatus error solve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "Createuser",
         "createuserdto",
         "newuser",
-        "typeorm"
+        "typeorm",
+        "updateleave",
+        "userleave"
     ]
 }
